chore: initial project setup for 3B1G e-commerce platform
- Setup baisc skelton for platform
- Configured ASP.NET Core MVC project structure
- Implemented Entity Framework Core with SQLite for development
- Added authentication and role-based authorization (Customer, Employee,
Admin)
- Created base models, controllers, and views for all user roles
- Integrated Bootstrap 5 and FontAwesome for modern UI
- Seeded database with sample data for products, genres, and users
- A Basic Frontend
- Updated all branding to 3B1G
- Added comprehensive technical README for other teammembers

--- a/E-Comm/appsettings.json
+++ b/E-Comm/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=StoreDB.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
