Migrate database from SQLite to MSSQL Server 2022 (Docker-compatible)
- Updated connection string and EF Core packages to use SQL Server
- Modified Program.cs and models for MSSQL compatibility
- Cleaned up old SQLite files and migrations
- Fixed and ran scripted_db.sql for Docker (removed Windows file paths)
- Populated database with full data set from scripted_db.sql
- Verified all tables, data, and relationships match ERD and requirements
- Disabled DataSeeder to avoid conflicts with SQL script data

--- a/E-Comm/appsettings.json
+++ b/E-Comm/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=StoreDB.sqlite"
+    "DefaultConnection": "Server=localhost,1433;Database=StoreDB;User Id=sa;Password=LYy95858sg@;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
