Updated to windows auth in appsettings.json

--- a/E-Comm/appsettings.json
+++ b/E-Comm/appsettings.json
@@ -1,13 +1,12 @@
-{
-  "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=StoreDB;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+{//Updated to windows auth
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=StoreDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
     },
-
     "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     },
     "AllowedHosts": "*"
-  }
+}
