implemented all customer function

--- a/E-Comm/appsettings.json
+++ b/E-Comm/appsettings.json
@@ -1,7 +1,7 @@
-{//Updated to windows auth
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=StoreDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-    },
+{
+"ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=StoreDB;User Id=sa;Password=LYy95858sg@;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
